--- a/fields.yaml
+++ b/fields.yaml
@@ -25,53 +25,18 @@ tabs:
             type: textarea
             default: Разработано по заказу Профессионального технического колледжа города Астаны
         # TAB: THEME COLORS
-        override_color: 
+        link_color:
             tab: Theme Colors
-            label: Override default theme colors
-            type: switch
-            options:
-                on: true
-                off: false
-        override_color_primary:
-            tab: Theme Colors
-            label: Primary 
+            label: Основной цвет темы
             type: colorpicker
-            availableColors: ["#6C63FF","#FC8181","#F6AD55","#F6E05E","#68D391","#4FD1C5","#63B3ED","#7F9CF5","#B794F4","#F687B3"]
-            default: "#6C63FF"
-            assetVar: "override-color-primary"
-        
-        override_color_secondary:
-            tab: Theme Colors
-            label: Secondary 
-            type: colorpicker
-            availableColors: ["#8C87E6","#FC8181","#F6AD55","#F6E05E","#68D391","#4FD1C5","#63B3ED","#7F9CF5","#B794F4","#F687B3"]
-            default: "#8C87E6"
-            assetVar: "override-color-secondary"
+            default: "#020031"
 
-        override_color_tertiary:
+        link_color_two:
             tab: Theme Colors
-            label: Tertiary 
+            label: Цвет элементов
             type: colorpicker
-            availableColors: ["#444444","#FC8181","#F6AD55","#F6E05E","#68D391","#4FD1C5","#63B3ED","#7F9CF5","#B794F4","#F687B3"]
-            default: "#444444"
-            assetVar: "override-color-tertiary"
-        
-        override_color_error:
-            tab: Theme Colors
-            label: Error 
-            type: colorpicker
-            availableColors: ["#FF6363","#FC8181","#F6AD55","#F6E05E","#68D391","#4FD1C5","#63B3ED","#7F9CF5","#B794F4","#F687B3"]
-            default: "#FF6363"
-            assetVar: "override-color-error"
+            default: "#f6783a"
 
-        override_color_text:
-            tab: Theme Colors
-            label: Text 
-            type: colorpicker
-            availableColors: ["#444444","#FC8181","#F6AD55","#F6E05E","#68D391","#4FD1C5","#63B3ED","#7F9CF5","#B794F4","#F687B3"]
-            default: "#444444"
-            assetVar: "override-color-text"
-        
         # TAB: COMPANY INFO
         company_contact_title:
             tab: Company Info
@@ -243,19 +208,15 @@ tabs:
             type: repeater
             form:
                 fields:
-                    title:
-                        label: Number
-                        type: text
-                        span: left
-                        default: 1
                     name:
                         label: Title
                         type: text
-                        span: right
+                        span: left
                         default: You title
                     description:
                         label: Description
                         type: text
+                        span: right
                         default: You Description
 
         # TAB: FACTS
