--- a/fields.yaml
+++ b/fields.yaml
@@ -441,6 +441,12 @@ tabs:
             type: text
             span: left
 
+        gallery_folder_list:
+            tab: Gallerey
+            label: Status
+            type: dropdown
+            options: listStatuses               
+
         # TAB: SOCIAL
         social_facebook:
             tab: Social
